Update Email Verification Template

--- a/template/EmailVerification.html
+++ b/template/EmailVerification.html
@@ -12,6 +12,9 @@
 
 <br>
 IOICamp 2021 程式解題競賽集訓營 籌備團隊 敬上<br>
+營隊官網：<a href="https://ioicamp.org">ioicamp.org</a><br>
+聯絡信箱：<a href="mailto:ioicamp@csie.ntu.edu.tw">ioicamp@csie.ntu.edu.tw</a><br>
 <br><br>
 
-<small>由於您（或其他人）使用此信箱（{{.Email}}）註冊「IOICamp 2021 程式解題競賽集訓營」的報名帳號，因此我們自動寄送此信給您。如果這不是您，請直接忽略，或回覆此信讓我們知道，謝謝。</small>
+<small>由於您（或其他人）使用此信箱（{{.Email}}）註冊「IOICamp 2021 程式解題競賽集訓營」的報名帳號，因此我們自動寄送此信給您。如果這不是您，請直接忽略，或發信至 <a href="mailto:ioicamp@csie.ntu.edu.tw">ioicamp@csie.ntu.edu.tw</a> 讓我們知道，謝謝。</small><br>
+<small style="color: red;">此為系統自動寄信，請勿直接回覆，謝謝。</small>
