[Fix] Fix typo in email template

--- a/template/EmailVerification.html
+++ b/template/EmailVerification.html
@@ -8,7 +8,7 @@
 驗證碼： <b>{{.Token}}</b><br>
 <br>
 
-驗證碼將在一小時候失效，且僅限用於此電子郵件信箱。如逾時或欲以其他電子郵件信箱註冊，請重新申請驗證碼。<br>
+驗證碼將在一小時後失效，且僅限用於此電子郵件信箱。如逾時或欲以其他電子郵件信箱註冊，請重新申請驗證碼。<br>
 
 <br>
 IOICamp 2021 程式解題競賽集訓營 籌備團隊 敬上<br>
