--- a/template/PasswordReset.html
+++ b/template/PasswordReset.html
@@ -1,12 +1,12 @@
 {{define "Subject"}}[IOICamp 2021 程式解題競賽集訓營] 密碼重設信{{end}}
-{{define "ResetLink"}}{{.Root}}/resetPassword/?token={{.Token}}{{end}}
+{{define "ResetLink"}}{{.Root}}/user/resetPassword/?token={{.Token}}{{end}}
 您好，<br>
 <br>
 您剛才在 <b>IOICamp 2021 程式解題競賽集訓營</b> 的官網上使用此信箱（{{.Email}}）要求重設密碼，請點擊<a href='{{template "ResetLink" . }}'>此處</a>或使用瀏覽器開啟下方的連結來繼續重設流程。<br>
 <br>
 {{template "ResetLink" . }}<br>
 <br>
-此連結將在<b>一小時後</b>失效。如欲申請新連結，請至 <a href="{{.Root}}/requestPasswordReset/">{{.Root}}/requestPasswordReset/</a>。<br>
+此連結將在<b>一小時後</b>失效。如欲申請新連結，請至 <a href="{{.Root}}/user/requestPasswordReset/">{{.Root}}/user/requestPasswordReset/</a>。<br>
 <br>
 IOICamp 2021 程式解題競賽集訓營 籌備團隊 敬上<br>
 營隊官網：<a href="https://ioicamp.org">ioicamp.org</a><br>
